--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </script>
 </head>
-<body role='flatdoc'>
+<body role='flatdoc' class='large-brief'>
 
   <div class='header'>
     <div class='left'>
