--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 
   <div class='header'>
     <div class='left'>
-      <h1>PHP Value Objects</h1>
+       <img src="logo_150px.png" width="150" height="150" />
     </div>
     <div class='right'>
-      <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=tonypiper&amp;repo=php-value-objects&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
