local import of flatdoc

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/legacy.js'></script>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/flatdoc.js'></script>
+  <script src='/flatdoc/0.8.6/legacy.js'></script>
+  <script src='/flatdoc/0.8.6/flatdoc.js'></script>
 
   <!-- Flatdoc theme -->
-  <link  href='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/style.css' rel='stylesheet'>
-  <script src='http://rstacruz.github.io/flatdoc/v/0.8.6/theme-white/script.js'></script>
+  <link  href='/flatdoc/0.8.6/theme-white/style.css' rel='stylesheet'>
+  <script src='/flatdoc/0.8.6/theme-white/script.js'></script>
 
   <!-- Meta -->
   <meta content="PHP Value Objects" property="og:title">
@@ -52,6 +52,7 @@
       <div class='menu section' role='flatdoc-menu'></div>
     </div>
     <div role='flatdoc-content' class='content'></div>
+
   </div>
 
 </body>
