--- a/index.html
+++ b/index.html
@@ -1,59 +1,90 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width">
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
 
-  <title>PHP Value Objects</title>
+    <title>PHP Value Objects</title>
 
-  <!-- Flatdoc -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src='/flatdoc/0.8.6/legacy.js'></script>
-  <script src='/flatdoc/0.8.6/flatdoc.js'></script>
+    <!-- Flatdoc -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src='flatdoc/0.8.6/legacy.js'></script>
+    <script src='flatdoc/0.8.6/flatdoc.js'></script>
 
-  <!-- Flatdoc theme -->
-  <link  href='/flatdoc/0.8.6/theme-white/style.css' rel='stylesheet'>
-  <script src='/flatdoc/0.8.6/theme-white/script.js'></script>
+    <!-- Flatdoc theme -->
+    <link href='flatdoc/0.8.6/theme-white/style.css' rel='stylesheet'>
+    <script src='flatdoc/0.8.6/theme-white/script.js'></script>
+    <style>
+        #disqus_thread {
+            margin-left: 40px;
+            width: 450px;
+        }
+    </style>
 
-  <!-- Meta -->
-  <meta content="PHP Value Objects" property="og:title">
-  <meta content="Promoting the use of Value Objects in PHP Development" name="description">
+    <!-- Meta -->
+    <meta content="PHP Value Objects" property="og:title">
+    <meta content="Promoting the use of Value Objects in PHP Development" name="description">
 
-  <!-- Initializer -->
-  <script>
-    Flatdoc.run({
-      fetcher: Flatdoc.github('tonypiper/php-value-objects')
-    });
-  </script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <!-- Initializer -->
+    <script>
+        Flatdoc.run({
+            fetcher: Flatdoc.github('tonypiper/php-value-objects')
+        });
+    </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-56303887-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-56303887-1', 'auto');
+        ga('send', 'pageview');
 
-</script>
+    </script>
 </head>
 <body role='flatdoc' class='large-brief'>
 
-  <div class='header'>
+<div class='header'>
     <div class='left'>
-       <img src="logo_150px.png" width="150" height="150" />
+        <img src="logo_150px.png" width="150" height="150"/>
     </div>
     <div class='right'>
     </div>
-  </div>
+</div>
 
-  <div class='content-root'>
+<div class='content-root'>
     <div class='menubar'>
-      <div class='menu section' role='flatdoc-menu'></div>
+        <div class='menu section' role='flatdoc-menu'></div>
     </div>
     <div role='flatdoc-content' class='content'></div>
+    <div class='content'>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'phpvalueobjects'; // required: replace example with your forum shortname
 
-  </div>
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function () {
+                var dsq = document.createElement('script');
+                dsq.type = 'text/javascript';
+                dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+    </div>
+</div>
+
 
 </body>
 </html>
